--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     </main>
     <!--FOOTER-->
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <a class="footer-logo link" href=""
           >WEB<span class="footer-logo-color">STUDIO</span></a
         >
