--- a/portfolio.html
+++ b/portfolio.html
@@ -126,7 +126,7 @@
                 <p class="portfolio-description">Marketing</p>
               </div>
             </li>
-            <li class="benefits-item">
+            <li class="portfolio-item">
               <img
                 src="./images/portfolio-images-row2/screen-illustrations.jpg"
                 alt="screen-illustrations"
@@ -138,7 +138,7 @@
                 <p class="portfolio-description">Design</p>
               </div>
             </li>
-            <li class="portfolios-item">
+            <li class="portfolio-item">
               <img
                 src="./images/portfolio-images-row2/online-courses.jpg"
                 alt="online-courses"
@@ -192,7 +192,7 @@
     </main>
     <!--FOOTER-->
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <a class="footer-logo link" href=""
           >WEB<span class="footer-logo-color">STUDIO</span></a
         >
